--- a/src/app.css
+++ b/src/app.css
@@ -224,9 +224,11 @@ body {
 		.wx-topline {
 			color: var(--muted);
 			display: flex;
+			flex-direction: column;
 			font-size: 0.95rem;
-			gap: 0.75rem;
+			gap: 0.25rem;
 			justify-content: flex-end;
+			align-items: flex-end;
 		}
 
 		.wx-alerts {
@@ -246,7 +248,7 @@ body {
 				),
 				color-mix(in oklch, var(--card), transparent 40%);
 			border: 0.0625rem solid color-mix(in oklch, var(--fg), transparent 82%);
-			border-radius: 62.4375rem;
+			border-radius: 0.75rem;
 			display: inline-flex;
 			font-size: 0.8rem;
 			gap: 0.35rem;
@@ -308,14 +310,20 @@ body {
 			white-space: nowrap;
 		}
 
+		--wx-alert-desc-line-clamp: 4;
+
 		.wx-alert-desc {
+			-webkit-box-orient: vertical;
+			-webkit-line-clamp: var(--wx-alert-desc-line-clamp, 2);
 			color: var(--muted);
+			display: -webkit-box;
 			font-size: 0.75rem;
-			font-weight: 500;
+			font-weight: 400;
+			line-clamp: var(--wx-alert-desc-line-clamp, 2);
 			max-width: 26rem;
 			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
+			/* text-overflow: ellipsis; */
+			/* white-space: nowrap; */
 		}
 	}
 
