--- a/src/app.css
+++ b/src/app.css
@@ -121,12 +121,12 @@ body {
 
 /* Hero layout */
 .hero {
-	display: flex;
+	display: grid;
 	flex-direction: column;
 	gap: 0.5rem;
 	grid-area: hero;
 	min-height: 0;
-	padding: 0.25rem 0.25rem 0.5rem 0.25rem;
+	padding: 0.25rem 0.25rem 0 0.25rem;
 }
 
 .hero-alerts {
@@ -637,6 +637,10 @@ body {
 			}
 		}
 	}
+
+	path[stroke="rgb(55,65,81)"] {
+		stroke: oklch(1 0 0);
+	}
 }
 
 .board {
@@ -662,7 +666,7 @@ body {
 .cal-header {
 	align-items: end;
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	gap: 0.375rem;
 
 	& .cal-last-updated {
@@ -673,7 +677,7 @@ body {
 .cal-legend {
 	align-items: center;
 	display: flex;
-	flex-wrap: wrap;
+	flex-wrap: nowrap;
 	gap: 0.375rem;
 	margin: 0;
 
@@ -1118,12 +1122,16 @@ body {
 }
 
 @media (orientation: landscape) and (min-width: 1100px) {
+	.snow-overlay {
+		--wp-height: 100vh;
+	}
+
 	.board {
-		gap: 0.75rem;
+		gap: 0.25rem;
 		grid-template-areas: 'hero cal' 'sys sys';
 		grid-template-columns: minmax(22rem, 0.9fr) minmax(28rem, 1.1fr);
 		grid-template-rows: 1fr max-content;
-		padding: 0.5rem;
+		padding: 0.5rem 0.5rem 41px 0.5rem;
 	}
 
 	.cal {
